--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -46,14 +46,14 @@ body {
 }
 .todo-container ul {
     list-style: none;
-}
+} */
 .todo-list-item {
     padding: 10px;
     margin-top: 10px;
     border: none;
     border-radius: 5px;
-    font-family: "Candal", sans-serif;
-    background: rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    background: rgba(0, 0, 0, 0.05);
     display: flex;
     flex-direction: row;
 }
@@ -74,8 +74,6 @@ body {
     border-radius: 5px;
     cursor: pointer;
     padding: 5px;
-    font-family: "Candal", sans-serif;
-    background-color: rgb(51, 212, 100);
 }
 .todo-list-item .cancel {
     color: white;
@@ -84,21 +82,17 @@ body {
     border-radius: 5px;
     cursor: pointer;
     padding: 5px;
-    font-family: "Candal", sans-serif;
-    background-color: rgb(223, 43, 43);
     margin-left: 5px;
 }
 .todo-list-item div {
     flex-grow: 2;
 }
 .todo-list-item .edit {
-    color: rgb(143, 233, 58);
     margin-right: 10px;
     cursor: pointer;
     text-decoration: none;
 }
 .todo-list-item .remove {
-    color: rgb(243, 96, 96);
     margin-right: 5px;
     cursor: pointer;
     text-decoration: none;
