--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,7 @@ body {
     margin-right: 20px;
     border: none;
     border-radius: 5px;
-    font-family: "Candal", sans-serif;
+    font-weight: 700;
 }
 .todo-list-item button {
     color: white;
